--- a/index.html
+++ b/index.html
@@ -11,5 +11,41 @@
     <link rel="stylesheet" href="style.css" />
     <title>Yousef Badr</title>
   </head>
-  <body></body>
+  <body>
+    <header class="homepage">
+      <nav>
+        <div id="logo">Yousef Badr</div>
+        <img src="./images/Enabled.svg" alt="" />
+      </nav>
+      <section id="header">
+        <h1>Hey There. I'm Yousef</h1>
+        <h5>I’am a Software Developer</h5>
+        <p>
+          I can help you build a product , feature or website Look through some
+          of my work and experience! If you like what you see and have a project
+          you need coded, don’t hestiate to contact me.
+        </p>
+
+        <div id="social-icons">
+          <a href=""
+            ><img src="./images/Icon -GitHub.png" alt="" srcset=""
+          /></a>
+          <a href=""
+            ><img src="./images/Icon - Linkedin.png" alt="" srcset=""
+          /></a>
+          <a href=""
+            ><img src="./images/Icon - Angelist.png" alt="" srcset=""
+          /></a>
+          <a href=""
+            ><img src="./images/Icon - Twitter.png" alt="" srcset=""
+          /></a>
+          <a href=""
+            ><img src="./images/Icon - Medium.png" alt="" srcset=""
+          /></a>
+        </div>
+
+        <img src="./images/Group.png" id="illustration" alt="" />
+      </section>
+    </header>
+  </body>
 </html>
