fix the logo link & change the socail icons into unordered list & fix the readme file

--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto|Poppins|Crete Round|Inter"
-    /> -->
+
     <link rel="stylesheet" href="style.css" />
     <title>Yousef Badr</title>
   </head>
   <body>
     <header class="homepage">
       <nav>
-        <div id="logo">Yousef Badr</div>
+        <a href="#" id="logo">Yousef Badr</a>
         <img src="./images/Enabled.svg" alt="" />
       </nav>
       <section id="header">
@@ -26,23 +23,25 @@
           you need coded, don’t hestiate to contact me.
         </p>
 
-        <div id="social-icons">
-          <a href=""
-            ><img src="./images/Icon -GitHub.png" alt="" srcset=""
-          /></a>
-          <a href=""
-            ><img src="./images/Icon - Linkedin.png" alt="" srcset=""
-          /></a>
-          <a href=""
-            ><img src="./images/Icon - Angelist.png" alt="" srcset=""
-          /></a>
-          <a href=""
-            ><img src="./images/Icon - Twitter.png" alt="" srcset=""
-          /></a>
-          <a href=""
-            ><img src="./images/Icon - Medium.png" alt="" srcset=""
-          /></a>
-        </div>
+        <ul id="social-icons">
+          <li>
+            <a href=""><img src="./images/Icon -GitHub.png" alt="" /> </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/Icon - Linkedin.png" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="#"><img src="./images/Icon - Angelist.png" alt="" /> </a>
+          </li>
+          <li>
+            <a href="#"><img src="./images/Icon - Twitter.png" alt="" /> </a>
+          </li>
+          <li>
+            <a href=""><img src="./images/Icon - Medium.png" alt="" /> </a>
+          </li>
+        </ul>
 
         <img src="./images/Group.png" id="illustration" alt="" />
       </section>
