Add About me section and styling & add contact me section with  styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Yousef Badr</title>
   </head>
   <body>
-    <header class="homepage">
+    <header>
       <nav>
         <a href="#" id="logo">Yousef Badr</a>
         <img src="./images/Enabled.svg" alt="" />
@@ -23,7 +23,7 @@
           you need coded, don’t hestiate to contact me.
         </p>
 
-        <ul id="social-icons">
+        <ul class="social-icons">
           <li>
             <a href=""><img src="./images/Icon -GitHub.png" alt="" /> </a>
           </li>
@@ -46,5 +46,178 @@
         <img src="./images/Group.png" id="illustration" alt="" />
       </section>
     </header>
+
+    <main id="myworks">
+      <div id="title">
+        <h1>My Recent Works</h1>
+        <hr />
+      </div>
+
+      <section id="project1">
+        <img src="./images/Img Placeholder.png" alt="" />
+        <h3>Multi-Post Stories</h3>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required. has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a standard dummy text.
+        </p>
+        <ul id="skills">
+          <li>html</li>
+          <li>css</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+
+        <button>See Project</button>
+      </section>
+
+      <section id="project2">
+        <h1>Profesional Art Printing Data</h1>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required. has been the industry's standard
+        </p>
+        <ul id="skills">
+          <li>html</li>
+          <li>css</li>
+          <li>bootstrap</li>
+        </ul>
+        <button>See Project</button>
+      </section>
+
+      <section id="project2">
+        <h1>Profesional Art Printing Data</h1>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required. has been the industry's standard
+        </p>
+        <ul id="skills">
+          <li>html</li>
+          <li>css</li>
+          <li>bootstrap</li>
+        </ul>
+        <button>See Project</button>
+      </section>
+
+      <section id="project2">
+        <h1>Profesional Art Printing Data</h1>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required. has been the industry's standard
+        </p>
+        <ul id="skills">
+          <li>html</li>
+          <li>css</li>
+          <li>bootstrap</li>
+        </ul>
+        <button>See Project</button>
+      </section>
+
+      <section id="project2">
+        <h1>Profesional Art Printing Data</h1>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required. has been the industry's standard
+        </p>
+        <ul id="skills">
+          <li>html</li>
+          <li>css</li>
+          <li>bootstrap</li>
+        </ul>
+        <button>See Project</button>
+      </section>
+    </main>
+
+    <section id="about-me">
+      <h1 id="title">About me</h1>
+      <p>
+        Hello I’m a software developer! I can help you build a product , feature
+        or website Look through some of my work and experience! If you like what
+        you see and have a project you need coded, don’t hestiate to contact me.
+      </p>
+      <button id="download">Get My Resume</button>
+
+      <!-- <img
+        src="./images/illustration-about-me-mobile.png"
+        id="illustration"
+        alt=""
+      /> -->
+
+      <hr />
+
+      <ul id="details">
+        <li class="skill">
+          <h1>
+            <img src="./images/Rectangle 55.png" alt="" /> <span>Language</span>
+          </h1>
+          <ul>
+            <li>Js</li>
+            <li>Ruby</li>
+            <li>Html</li>
+            <li>Css</li>
+          </ul>
+        </li>
+        <li class="skill">
+          <h1>
+            <img src="./images/Rectangle 56.png" alt="" /> <span>Framwork</span>
+          </h1>
+
+          <ul>
+            <li>Ruby on Rails</li>
+            <li>Bootstrap</li>
+            <li>Selinum</li>
+          </ul>
+        </li>
+        <li class="skill">
+          <h1>
+            <img src="./images/Rectangle 57.png" alt="" /> <span>Skills</span>
+          </h1>
+          <ul>
+            <li>GitHub</li>
+            <li>Ubuntu</li>
+            <li>Codepen</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+
+    <section id="contact-me">
+      <h1>
+        I'm always interested in hearing about new projects, so if you'd like to
+        chat please get in touch.
+      </h1>
+      <form action="">
+        <input type="text" name="name" placeholder="Full name" />
+        <input type="text" name="email" placeholder="Email address" />
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="Enter text here"
+        ></textarea>
+        <button>Get in touch</button>
+      </form>
+      <hr />
+      <ul class="social-icons">
+        <li>
+          <a href=""><img src="./images/github.png" alt="" /> </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/in.png" alt="" />
+          </a>
+        </li>
+        <li>
+          <a href="#"><img src="./images/angela.png" alt="" /> </a>
+        </li>
+        <li>
+          <a href="#"><img src="./images/twitter.png" alt="" /> </a>
+        </li>
+        <li>
+          <a href=""><img src="./images/medium.png" alt="" /> </a>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
