--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           sign-ups required. has been the industry's standard dummy text ever
           since the 1500s, when an unknown printer took a standard dummy text.
         </p>
-        <ul id="skills">
+        <ul class="skills">
           <li>html</li>
           <li>css</li>
           <li>bootstrap</li>
@@ -77,7 +77,7 @@
           A daily selection of privately personalized reads; no accounts or
           sign-ups required. has been the industry's standard
         </p>
-        <ul id="skills">
+        <ul class="skills">
           <li>html</li>
           <li>css</li>
           <li>bootstrap</li>
@@ -91,7 +91,7 @@
           A daily selection of privately personalized reads; no accounts or
           sign-ups required. has been the industry's standard
         </p>
-        <ul id="skills">
+        <ul class="skills">
           <li>html</li>
           <li>css</li>
           <li>bootstrap</li>
@@ -105,7 +105,7 @@
           A daily selection of privately personalized reads; no accounts or
           sign-ups required. has been the industry's standard
         </p>
-        <ul id="skills">
+        <ul class="skills">
           <li>html</li>
           <li>css</li>
           <li>bootstrap</li>
@@ -119,7 +119,7 @@
           A daily selection of privately personalized reads; no accounts or
           sign-ups required. has been the industry's standard
         </p>
-        <ul id="skills">
+        <ul class="skills">
           <li>html</li>
           <li>css</li>
           <li>bootstrap</li>
@@ -146,7 +146,7 @@
       <hr />
 
       <ul id="details">
-        <li class="skill">
+        <li class="tools">
           <h1>
             <img src="./images/Rectangle 55.png" alt="" /> <span>Language</span>
           </h1>
@@ -157,7 +157,7 @@
             <li>Css</li>
           </ul>
         </li>
-        <li class="skill">
+        <li class="tools">
           <h1>
             <img src="./images/Rectangle 56.png" alt="" /> <span>Framwork</span>
           </h1>
@@ -168,7 +168,7 @@
             <li>Selinum</li>
           </ul>
         </li>
-        <li class="skill">
+        <li class="tools">
           <h1>
             <img src="./images/Rectangle 57.png" alt="" /> <span>Skills</span>
           </h1>
