--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <main id="myworks">
       <div id="title">
-        <h1>My Recent Works</h1>
+        <span>My Recent Works</span>
         <hr />
       </div>
 
@@ -137,30 +137,30 @@
       </p>
       <button id="download">Get My Resume</button>
 
-      <!-- <img
+      <img
         src="./images/illustration-about-me-mobile.png"
-        id="illustration"
+        id="illustrationSec"
         alt=""
-      /> -->
+      />
 
       <hr />
 
-      <ul id="details">
+      <ul id="about-my-self">
         <li class="tools">
-          <h1>
-            <img src="./images/Rectangle 55.png" alt="" /> <span>Language</span>
-          </h1>
+          <header>
+            <img src="./images/Rectangle 55.png" alt="" /> Language
+          </header>
           <ul>
-            <li>Js</li>
+            <li>Java Script</li>
             <li>Ruby</li>
             <li>Html</li>
             <li>Css</li>
           </ul>
         </li>
         <li class="tools">
-          <h1>
-            <img src="./images/Rectangle 56.png" alt="" /> <span>Framwork</span>
-          </h1>
+          <header>
+            <img src="./images/Rectangle 56.png" alt="" /> Framworkes
+          </header>
 
           <ul>
             <li>Ruby on Rails</li>
@@ -169,13 +169,11 @@
           </ul>
         </li>
         <li class="tools">
-          <h1>
-            <img src="./images/Rectangle 57.png" alt="" /> <span>Skills</span>
-          </h1>
+          <header><img src="./images/Rectangle 57.png" alt="" /> Skills</header>
           <ul>
+            <li>Codepen</li>
             <li>GitHub</li>
             <li>Ubuntu</li>
-            <li>Codepen</li>
           </ul>
         </li>
       </ul>
