--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <nav>
         <a href="#" id="logo">Yousef Badr</a>
-        <img src="./images/Enabled.svg" alt="" />
+        <img src="./images/Enabled.svg" alt="logo image" />
       </nav>
       <section id="header">
         <h1>Hey There. I'm Yousef</h1>
@@ -25,36 +25,48 @@
 
         <ul class="social-icons">
           <li>
-            <a href=""><img src="./images/Icon -GitHub.png" alt="" /> </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/Icon - Linkedin.png" alt="" />
+            <a href=""
+              ><img src="./images/Icon -GitHub.png" alt="github icon" />
             </a>
           </li>
           <li>
-            <a href="#"><img src="./images/Icon - Angelist.png" alt="" /> </a>
+            <a href="">
+              <img src="./images/Icon - Linkedin.png" alt="linkedin icon" />
+            </a>
           </li>
           <li>
-            <a href="#"><img src="./images/Icon - Twitter.png" alt="" /> </a>
+            <a href="#"
+              ><img src="./images/Icon - Angelist.png" alt="anglist icon" />
+            </a>
           </li>
           <li>
-            <a href=""><img src="./images/Icon - Medium.png" alt="" /> </a>
+            <a href="#"
+              ><img src="./images/Icon - Twitter.png" alt="twitter icon" />
+            </a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/Icon - Medium.png" alt="medium icon" />
+            </a>
           </li>
         </ul>
 
-        <img src="./images/Group.png" id="illustration" alt="" />
+        <img
+          src="./images/Group.png"
+          id="illustration"
+          alt="illustration background"
+        />
       </section>
     </header>
 
-    <main id="myworks">
+    <section id="myworks">
       <div id="title">
-        <span>My Recent Works</span>
+        <h2>My Recent Works</h2>
         <hr />
       </div>
 
       <section id="project1">
-        <img src="./images/Img Placeholder.png" alt="" />
+        <img src="./images/Img Placeholder.png" alt="project background" />
         <h3>Multi-Post Stories</h3>
         <p>
           A daily selection of privately personalized reads; no accounts or
@@ -67,12 +79,11 @@
           <li>bootstrap</li>
           <li>Ruby</li>
         </ul>
-
         <button>See Project</button>
       </section>
 
       <section id="project2">
-        <h1>Profesional Art Printing Data</h1>
+        <h3>Profesional Art Printing Data</h3>
         <p>
           A daily selection of privately personalized reads; no accounts or
           sign-ups required. has been the industry's standard
@@ -86,7 +97,7 @@
       </section>
 
       <section id="project2">
-        <h1>Profesional Art Printing Data</h1>
+        <h3>Profesional Art Printing Data</h3>
         <p>
           A daily selection of privately personalized reads; no accounts or
           sign-ups required. has been the industry's standard
@@ -100,7 +111,7 @@
       </section>
 
       <section id="project2">
-        <h1>Profesional Art Printing Data</h1>
+        <h3>Profesional Art Printing Data</h3>
         <p>
           A daily selection of privately personalized reads; no accounts or
           sign-ups required. has been the industry's standard
@@ -114,7 +125,7 @@
       </section>
 
       <section id="project2">
-        <h1>Profesional Art Printing Data</h1>
+        <h3>Profesional Art Printing Data</h3>
         <p>
           A daily selection of privately personalized reads; no accounts or
           sign-ups required. has been the industry's standard
@@ -126,30 +137,30 @@
         </ul>
         <button>See Project</button>
       </section>
-    </main>
+    </section>
 
     <section id="about-me">
-      <h1 id="title">About me</h1>
-      <p>
-        Hello I’m a software developer! I can help you build a product , feature
-        or website Look through some of my work and experience! If you like what
-        you see and have a project you need coded, don’t hestiate to contact me.
-      </p>
-      <button id="download">Get My Resume</button>
-
-      <img
-        src="./images/illustration-about-me-mobile.png"
-        id="illustrationSec"
-        alt=""
-      />
+      <div id="about-header">
+        <h4 id="title">About me</h4>
+        <p>
+          Hello I’m a software developer! I can help you build a product ,
+          feature or website Look through some of my work and experience! If you
+          like what you see and have a project you need coded, don’t hestiate to
+          contact me.
+        </p>
+        <button id="download">Get My Resume</button>
+        <img
+          src="./images/illustration-about-me-mobile.png"
+          id="illustrationSec"
+          alt="project wallpaper"
+        />
+      </div>
 
       <hr />
 
       <ul id="about-my-self">
         <li class="tools">
-          <header>
-            <img src="./images/Rectangle 55.png" alt="" /> Language
-          </header>
+          <h4 class="heading1">Language</h4>
           <ul>
             <li>Java Script</li>
             <li>Ruby</li>
@@ -158,21 +169,22 @@
           </ul>
         </li>
         <li class="tools">
-          <header>
-            <img src="./images/Rectangle 56.png" alt="" /> Framworkes
-          </header>
-
+          <h4 class="heading2">Framworkes</h4>
           <ul>
             <li>Ruby on Rails</li>
             <li>Bootstrap</li>
-            <li>Selinum</li>
+            <li>Selenium</li>
+            <li>RSPec</li>
+            <li>CapyBara</li>
           </ul>
         </li>
         <li class="tools">
-          <header><img src="./images/Rectangle 57.png" alt="" /> Skills</header>
+          <h4 class="heading3">Skills</h4>
           <ul>
-            <li>Codepen</li>
             <li>GitHub</li>
+            <li>Codekit</li>
+            <li>Codepen</li>
+            <li>Gitlab</li>
             <li>Ubuntu</li>
           </ul>
         </li>
@@ -199,21 +211,21 @@
       <hr />
       <ul class="social-icons">
         <li>
-          <a href=""><img src="./images/github.png" alt="" /> </a>
+          <a href=""><img src="./images/github.png" alt="github icon" /> </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/in.png" alt="" />
+            <img src="./images/in.png" alt="linkedin icon" />
           </a>
         </li>
         <li>
-          <a href="#"><img src="./images/angela.png" alt="" /> </a>
+          <a href="#"><img src="./images/angela.png" alt="angela icon" /> </a>
         </li>
         <li>
-          <a href="#"><img src="./images/twitter.png" alt="" /> </a>
+          <a href="#"><img src="./images/twitter.png" alt="twitter icon" /> </a>
         </li>
         <li>
-          <a href=""><img src="./images/medium.png" alt="" /> </a>
+          <a href=""><img src="./images/medium.png" alt="medium icon" /> </a>
         </li>
       </ul>
     </section>
