--- a/index.html
+++ b/index.html
@@ -1,194 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="style.css" />
-    <title>Yousef Badr</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="#" id="logo">Yousef Badr</a>
-        <img src="./images/Enabled.svg" alt="logo image" />
-      </nav>
-      <section id="header">
-        <h1>Hey There. I'm Yousef</h1>
-        <h5>I’am a Software Developer</h5>
-        <p>
-          I can help you build a product , feature or website Look through some
-          of my work and experience! If you like what you see and have a project
-          you need coded, don’t hestiate to contact me.
-        </p>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <ul class="social-icons">
-          <li>
-            <a href=""
-              ><img src="./images/Icon -GitHub.png" alt="github icon" />
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/Icon - Linkedin.png" alt="linkedin icon" />
-            </a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="./images/Icon - Angelist.png" alt="anglist icon" />
-            </a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="./images/Icon - Twitter.png" alt="twitter icon" />
-            </a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/Icon - Medium.png" alt="medium icon" />
-            </a>
-          </li>
-        </ul>
+  <link rel="stylesheet" href="style.css" />
+  <title>Yousef Badr</title>
+</head>
 
-        <img
-          src="./images/Group.png"
-          id="illustration"
-          alt="illustration background"
-        />
-      </section>
-    </header>
+<body>
+  <header>
+    <nav>
+      <a href="#" id="logo">Yousef Badr</a>
+      <img src="./images/Enabled.svg" alt="logo image" />
+    </nav>
+    <section id="header">
+      <h1>Hey There. I'm Yousef</h1>
+      <h5>I’am a Software Developer</h5>
+      <p>
+        I can help you build a product , feature or website Look through some
+        of my work and experience! If you like what you see and have a project
+        you need coded, don’t hestiate to contact me.
+      </p>
 
-    <section id="myworks">
-      <div id="title">
-        <h2>My Recent Works</h2>
-        <hr />
-      </div>
-
-      <section id="project1">
-        <img src="./images/Img Placeholder.png" alt="project background" />
-        <h3>Multi-Post Stories</h3>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a standard dummy text.
-        </p>
-        <ul class="skills">
-          <li>html</li>
-          <li>css</li>
-          <li>bootstrap</li>
-          <li>Ruby</li>
-        </ul>
-        <button>See Project</button>
-      </section>
-
-      <section id="project2">
-        <h3>Profesional Art Printing Data</h3>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard
-        </p>
-        <ul class="skills">
-          <li>html</li>
-          <li>css</li>
-          <li>bootstrap</li>
-        </ul>
-        <button>See Project</button>
-      </section>
-
-      <section id="project2">
-        <h3>Profesional Art Printing Data</h3>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard
-        </p>
-        <ul class="skills">
-          <li>html</li>
-          <li>css</li>
-          <li>bootstrap</li>
-        </ul>
-        <button>See Project</button>
-      </section>
-
-      <section id="project2">
-        <h3>Profesional Art Printing Data</h3>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard
-        </p>
-        <ul class="skills">
-          <li>html</li>
-          <li>css</li>
-          <li>bootstrap</li>
-        </ul>
-        <button>See Project</button>
-      </section>
-
-      <section id="project2">
-        <h3>Profesional Art Printing Data</h3>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard
-        </p>
-        <ul class="skills">
-          <li>html</li>
-          <li>css</li>
-          <li>bootstrap</li>
-        </ul>
-        <button>See Project</button>
-      </section>
-    </section>
-
-    <section id="about-me">
-      <div id="about-header">
-        <h4 id="title">About me</h4>
-        <p>
-          Hello I’m a software developer! I can help you build a product ,
-          feature or website Look through some of my work and experience! If you
-          like what you see and have a project you need coded, don’t hestiate to
-          contact me.
-        </p>
-        <button id="download">Get My Resume</button>
-        <img
-          src="./images/illustration-about-me-mobile.png"
-          id="illustrationSec"
-          alt="project wallpaper"
-        />
-      </div>
-
-      <hr />
-
-      <ul id="about-my-self">
-        <li class="tools">
-          <h4 class="heading1">Language</h4>
-          <ul>
-            <li>Java Script</li>
-            <li>Ruby</li>
-            <li>Html</li>
-            <li>Css</li>
-          </ul>
+      <ul class="social-icons">
+        <li>
+          <a href=""><img src="./images/Icon -GitHub.png" alt="github icon" />
+          </a>
         </li>
-        <li class="tools">
-          <h4 class="heading2">Framworkes</h4>
-          <ul>
-            <li>Ruby on Rails</li>
-            <li>Bootstrap</li>
-            <li>Selenium</li>
-            <li>RSPec</li>
-            <li>CapyBara</li>
-          </ul>
+        <li>
+          <a href="">
+            <img src="./images/Icon - Linkedin.png" alt="linkedin icon" />
+          </a>
         </li>
-        <li class="tools">
-          <h4 class="heading3">Skills</h4>
-          <ul>
-            <li>GitHub</li>
-            <li>Codekit</li>
-            <li>Codepen</li>
-            <li>Gitlab</li>
-            <li>Ubuntu</li>
-          </ul>
+        <li>
+          <a href="#"><img src="./images/Icon - Angelist.png" alt="anglist icon" />
+          </a>
+        </li>
+        <li>
+          <a href="#"><img src="./images/Icon - Twitter.png" alt="twitter icon" />
+          </a>
+        </li>
+        <li>
+          <a href=""><img src="./images/Icon - Medium.png" alt="medium icon" />
+          </a>
         </li>
       </ul>
+
+      <img src="./images/Group.png" id="illustration" alt="illustration background" />
     </section>
-  </body>
+  </header>
+
+  <section id="myworks">
+    <div id="title">
+      <h2>My Recent Works</h2>
+      <hr />
+    </div>
+
+    <section id="project1">
+      <img src="./images/Img Placeholder.png" alt="project background" />
+      <h3>Multi-Post Stories</h3>
+      <p>
+        A daily selection of privately personalized reads; no accounts or
+        sign-ups required. has been the industry's standard dummy text ever
+        since the 1500s, when an unknown printer took a standard dummy text.
+      </p>
+      <ul class="skills">
+        <li>html</li>
+        <li>css</li>
+        <li>bootstrap</li>
+        <li>Ruby</li>
+      </ul>
+      <button>See Project</button>
+    </section>
+
+    <section id="project2">
+      <h3>Profesional Art Printing Data</h3>
+      <p>
+        A daily selection of privately personalized reads; no accounts or
+        sign-ups required. has been the industry's standard
+      </p>
+      <ul class="skills">
+        <li>html</li>
+        <li>css</li>
+        <li>bootstrap</li>
+      </ul>
+      <button>See Project</button>
+    </section>
+
+    <section id="project2">
+      <h3>Profesional Art Printing Data</h3>
+      <p>
+        A daily selection of privately personalized reads; no accounts or
+        sign-ups required. has been the industry's standard
+      </p>
+      <ul class="skills">
+        <li>html</li>
+        <li>css</li>
+        <li>bootstrap</li>
+      </ul>
+      <button>See Project</button>
+    </section>
+
+    <section id="project2">
+      <h3>Profesional Art Printing Data</h3>
+      <p>
+        A daily selection of privately personalized reads; no accounts or
+        sign-ups required. has been the industry's standard
+      </p>
+      <ul class="skills">
+        <li>html</li>
+        <li>css</li>
+        <li>bootstrap</li>
+      </ul>
+      <button>See Project</button>
+    </section>
+
+    <section id="project2">
+      <h3>Profesional Art Printing Data</h3>
+      <p>
+        A daily selection of privately personalized reads; no accounts or
+        sign-ups required. has been the industry's standard
+      </p>
+      <ul class="skills">
+        <li>html</li>
+        <li>css</li>
+        <li>bootstrap</li>
+      </ul>
+      <button>See Project</button>
+    </section>
+  </section>
+
+  <section id="about-me">
+    <div id="about-header">
+      <h4 id="title">About me</h4>
+      <p>
+        Hello I’m a software developer! I can help you build a product ,
+        feature or website Look through some of my work and experience! If you
+        like what you see and have a project you need coded, don’t hestiate to
+        contact me.
+      </p>
+      <button id="download">Get My Resume</button>
+      <img src="./images/illustration-about-me-mobile.png" id="illustrationSec" alt="project wallpaper" />
+    </div>
+
+    <hr />
+
+    <ul id="about-my-self">
+      <li class="tools">
+        <h4 class="heading1">Language</h4>
+        <ul>
+          <li>Java Script</li>
+          <li>Ruby</li>
+          <li>Html</li>
+          <li>Css</li>
+        </ul>
+      </li>
+      <li class="tools">
+        <h4 class="heading2">Framworkes</h4>
+        <ul>
+          <li>Ruby on Rails</li>
+          <li>Bootstrap</li>
+          <li>Selenium</li>
+          <li>RSPec</li>
+          <li>CapyBara</li>
+        </ul>
+      </li>
+      <li class="tools">
+        <h4 class="heading3">Skills</h4>
+        <ul>
+          <li>GitHub</li>
+          <li>Codekit</li>
+          <li>Codepen</li>
+          <li>Gitlab</li>
+          <li>Ubuntu</li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <h3>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
+    <form method="post">
+      <ul>
+        <li>
+            <input type="text" placeholder="Full name" value="" />        
+        </li>
+        <li>
+          <input type="text" placeholder="Email address" value="" />
+        </li>
+      </ul>
+    </form>
+  </section>
+</body>
+
 </html>
