Add html to project

--- a/index.html
+++ b/index.html
@@ -190,8 +190,37 @@
         <li>
           <input type="text" placeholder="Email address" value="" />
         </li>
+        <li><textarea name="message" id="" cols="30" rows="10">Enter Text Here</textarea></li>
       </ul>
+      <button>
+        GET IN TOUCH
+      </button>
     </form>
+
+    <hr>
+    <ul class="social-icons">
+      <li>
+        <a href=""><img src="./images/github.png" alt="github icon" />
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img src="./images/linkedin.png" alt="linkedin icon" />
+        </a>
+      </li>
+      <li>
+        <a href="#"><img src="./images/angela.png" alt="anglist icon" />
+        </a>
+      </li>
+      <li>
+        <a href="#"><img src="./images/twitter.png" alt="twitter icon" />
+        </a>
+      </li>
+      <li>
+        <a href=""><img src="./images/medium.png" alt="medium icon" />
+        </a>
+      </li>
+    </ul>
   </section>
 </body>
 
