--- a/index.html
+++ b/index.html
@@ -182,18 +182,18 @@
   </section>
   <section>
     <h3>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
-    <form method="post">
-      <ul>
-        <li>
-            <input type="text" placeholder="Full name" value="" />        
-        </li>
-        <li>
-          <input type="text" placeholder="Email address" value="" />
-        </li>
-        <li><textarea name="message" id="" cols="30" rows="10">Enter Text Here</textarea></li>
-      </ul>
-      <button>
-        GET IN TOUCH
+    <form method="post" action="https://formspree.io/f/xpzewdnr">
+      <label for="name">
+        <input type="text" id="name" name="name" placeholder="Full name" required minlength="3" maxlength="30" />
+      </label>
+      <label for="email">
+        <input type="email" id="email" name="email" placeholder="Email address" required />
+      </label>
+      <label for="message">
+        <textarea id="message" name="message" maxlength="500" required cols="30" rows="10" placeholder="Enter text here"></textarea>
+      </label>
+      <button type="submit">
+        Get in touch
       </button>
     </form>
 
