style the contact me form

--- a/index.html
+++ b/index.html
@@ -1,227 +1,256 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Yousef Badr</title>
+  </head>
 
-  <link rel="stylesheet" href="style.css" />
-  <title>Yousef Badr</title>
-</head>
+  <body>
+    <header>
+      <nav>
+        <a href="#" id="logo">Yousef Badr</a>
+        <img src="./images/Enabled.svg" alt="logo image" />
+      </nav>
+      <section id="header">
+        <h1>Hey There. I'm Yousef</h1>
+        <h5>I’am a Software Developer</h5>
+        <p>
+          I can help you build a product , feature or website Look through some
+          of my work and experience! If you like what you see and have a project
+          you need coded, don’t hestiate to contact me.
+        </p>
 
-<body>
-  <header>
-    <nav>
-      <a href="#" id="logo">Yousef Badr</a>
-      <img src="./images/Enabled.svg" alt="logo image" />
-    </nav>
-    <section id="header">
-      <h1>Hey There. I'm Yousef</h1>
-      <h5>I’am a Software Developer</h5>
-      <p>
-        I can help you build a product , feature or website Look through some
-        of my work and experience! If you like what you see and have a project
-        you need coded, don’t hestiate to contact me.
-      </p>
+        <ul class="social-icons">
+          <li>
+            <a href=""
+              ><img src="./images/Icon -GitHub.png" alt="github icon" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/Icon - Linkedin.png" alt="linkedin icon" />
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/Icon - Angelist.png" alt="anglist icon" />
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/Icon - Twitter.png" alt="twitter icon" />
+            </a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/Icon - Medium.png" alt="medium icon" />
+            </a>
+          </li>
+        </ul>
 
+        <img
+          src="./images/Group.png"
+          id="illustration"
+          alt="illustration background"
+        />
+      </section>
+    </header>
+
+    <section id="myworks">
+      <div id="title">
+        <h2>My Recent Works</h2>
+        <hr />
+      </div>
+
+      <section id="project1">
+        <img src="./images/Img Placeholder.png" alt="project background" />
+        <h3>Multi-Post Stories</h3>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required. has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a standard dummy text.
+        </p>
+        <ul class="skills">
+          <li>html</li>
+          <li>css</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <button>See Project</button>
+      </section>
+
+      <section id="project2">
+        <h3>Profesional Art Printing Data</h3>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required. has been the industry's standard
+        </p>
+        <ul class="skills">
+          <li>html</li>
+          <li>css</li>
+          <li>bootstrap</li>
+        </ul>
+        <button>See Project</button>
+      </section>
+
+      <section id="project2">
+        <h3>Profesional Art Printing Data</h3>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required. has been the industry's standard
+        </p>
+        <ul class="skills">
+          <li>html</li>
+          <li>css</li>
+          <li>bootstrap</li>
+        </ul>
+        <button>See Project</button>
+      </section>
+
+      <section id="project2">
+        <h3>Profesional Art Printing Data</h3>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required. has been the industry's standard
+        </p>
+        <ul class="skills">
+          <li>html</li>
+          <li>css</li>
+          <li>bootstrap</li>
+        </ul>
+        <button>See Project</button>
+      </section>
+
+      <section id="project2">
+        <h3>Profesional Art Printing Data</h3>
+        <p>
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required. has been the industry's standard
+        </p>
+        <ul class="skills">
+          <li>html</li>
+          <li>css</li>
+          <li>bootstrap</li>
+        </ul>
+        <button>See Project</button>
+      </section>
+    </section>
+
+    <section id="about-me">
+      <div id="about-header">
+        <h4 id="title">About me</h4>
+        <p>
+          Hello I’m a software developer! I can help you build a product ,
+          feature or website Look through some of my work and experience! If you
+          like what you see and have a project you need coded, don’t hestiate to
+          contact me.
+        </p>
+        <button id="download">Get My Resume</button>
+        <img
+          src="./images/illustration-about-me-mobile.png"
+          id="illustrationSec"
+          alt="project wallpaper"
+        />
+      </div>
+
+      <hr />
+
+      <ul id="about-my-self">
+        <li class="tools">
+          <h4 class="heading1">Language</h4>
+          <ul>
+            <li>Java Script</li>
+            <li>Ruby</li>
+            <li>Html</li>
+            <li>Css</li>
+          </ul>
+        </li>
+        <li class="tools">
+          <h4 class="heading2">Framworkes</h4>
+          <ul>
+            <li>Ruby on Rails</li>
+            <li>Bootstrap</li>
+            <li>Selenium</li>
+            <li>RSPec</li>
+            <li>CapyBara</li>
+          </ul>
+        </li>
+        <li class="tools">
+          <h4 class="heading3">Skills</h4>
+          <ul>
+            <li>GitHub</li>
+            <li>Codekit</li>
+            <li>Codepen</li>
+            <li>Gitlab</li>
+            <li>Ubuntu</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section id="contact-me">
+      <h3>
+        I'm always interested in hearing about new projects, so if you'd like to
+        chat please get in touch.
+      </h3>
+      <form method="post" action="https://formspree.io/f/xpzewdnr">
+        <label for="name">
+          <input
+            type="text"
+            id="name"
+            name="name"
+            placeholder="Full name"
+            required
+            minlength="3"
+            maxlength="30"
+          />
+        </label>
+        <label for="email">
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Email address"
+            required
+          />
+        </label>
+        <label for="message">
+          <textarea
+            id="message"
+            name="message"
+            maxlength="500"
+            required
+            cols="30"
+            rows="10"
+            placeholder="Enter text here"
+          ></textarea>
+        </label>
+        <button type="submit">Get in touch</button>
+      </form>
+
+      <hr />
       <ul class="social-icons">
         <li>
-          <a href=""><img src="./images/Icon -GitHub.png" alt="github icon" />
-          </a>
+          <a href=""><img src="./images/github.png" alt="github icon" /> </a>
         </li>
         <li>
           <a href="">
-            <img src="./images/Icon - Linkedin.png" alt="linkedin icon" />
+            <img src="./images/in.png" alt="linkedin icon" />
           </a>
         </li>
         <li>
-          <a href="#"><img src="./images/Icon - Angelist.png" alt="anglist icon" />
-          </a>
+          <a href="#"><img src="./images/angela.png" alt="anglist icon" /> </a>
         </li>
         <li>
-          <a href="#"><img src="./images/Icon - Twitter.png" alt="twitter icon" />
-          </a>
+          <a href="#"><img src="./images/twitter.png" alt="twitter icon" /> </a>
         </li>
         <li>
-          <a href=""><img src="./images/Icon - Medium.png" alt="medium icon" />
-          </a>
+          <a href=""><img src="./images/medium.png" alt="medium icon" /> </a>
         </li>
       </ul>
-
-      <img src="./images/Group.png" id="illustration" alt="illustration background" />
     </section>
-  </header>
-
-  <section id="myworks">
-    <div id="title">
-      <h2>My Recent Works</h2>
-      <hr />
-    </div>
-
-    <section id="project1">
-      <img src="./images/Img Placeholder.png" alt="project background" />
-      <h3>Multi-Post Stories</h3>
-      <p>
-        A daily selection of privately personalized reads; no accounts or
-        sign-ups required. has been the industry's standard dummy text ever
-        since the 1500s, when an unknown printer took a standard dummy text.
-      </p>
-      <ul class="skills">
-        <li>html</li>
-        <li>css</li>
-        <li>bootstrap</li>
-        <li>Ruby</li>
-      </ul>
-      <button>See Project</button>
-    </section>
-
-    <section id="project2">
-      <h3>Profesional Art Printing Data</h3>
-      <p>
-        A daily selection of privately personalized reads; no accounts or
-        sign-ups required. has been the industry's standard
-      </p>
-      <ul class="skills">
-        <li>html</li>
-        <li>css</li>
-        <li>bootstrap</li>
-      </ul>
-      <button>See Project</button>
-    </section>
-
-    <section id="project2">
-      <h3>Profesional Art Printing Data</h3>
-      <p>
-        A daily selection of privately personalized reads; no accounts or
-        sign-ups required. has been the industry's standard
-      </p>
-      <ul class="skills">
-        <li>html</li>
-        <li>css</li>
-        <li>bootstrap</li>
-      </ul>
-      <button>See Project</button>
-    </section>
-
-    <section id="project2">
-      <h3>Profesional Art Printing Data</h3>
-      <p>
-        A daily selection of privately personalized reads; no accounts or
-        sign-ups required. has been the industry's standard
-      </p>
-      <ul class="skills">
-        <li>html</li>
-        <li>css</li>
-        <li>bootstrap</li>
-      </ul>
-      <button>See Project</button>
-    </section>
-
-    <section id="project2">
-      <h3>Profesional Art Printing Data</h3>
-      <p>
-        A daily selection of privately personalized reads; no accounts or
-        sign-ups required. has been the industry's standard
-      </p>
-      <ul class="skills">
-        <li>html</li>
-        <li>css</li>
-        <li>bootstrap</li>
-      </ul>
-      <button>See Project</button>
-    </section>
-  </section>
-
-  <section id="about-me">
-    <div id="about-header">
-      <h4 id="title">About me</h4>
-      <p>
-        Hello I’m a software developer! I can help you build a product ,
-        feature or website Look through some of my work and experience! If you
-        like what you see and have a project you need coded, don’t hestiate to
-        contact me.
-      </p>
-      <button id="download">Get My Resume</button>
-      <img src="./images/illustration-about-me-mobile.png" id="illustrationSec" alt="project wallpaper" />
-    </div>
-
-    <hr />
-
-    <ul id="about-my-self">
-      <li class="tools">
-        <h4 class="heading1">Language</h4>
-        <ul>
-          <li>Java Script</li>
-          <li>Ruby</li>
-          <li>Html</li>
-          <li>Css</li>
-        </ul>
-      </li>
-      <li class="tools">
-        <h4 class="heading2">Framworkes</h4>
-        <ul>
-          <li>Ruby on Rails</li>
-          <li>Bootstrap</li>
-          <li>Selenium</li>
-          <li>RSPec</li>
-          <li>CapyBara</li>
-        </ul>
-      </li>
-      <li class="tools">
-        <h4 class="heading3">Skills</h4>
-        <ul>
-          <li>GitHub</li>
-          <li>Codekit</li>
-          <li>Codepen</li>
-          <li>Gitlab</li>
-          <li>Ubuntu</li>
-        </ul>
-      </li>
-    </ul>
-  </section>
-  <section>
-    <h3>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
-    <form method="post" action="https://formspree.io/f/xpzewdnr">
-      <label for="name">
-        <input type="text" id="name" name="name" placeholder="Full name" required minlength="3" maxlength="30" />
-      </label>
-      <label for="email">
-        <input type="email" id="email" name="email" placeholder="Email address" required />
-      </label>
-      <label for="message">
-        <textarea id="message" name="message" maxlength="500" required cols="30" rows="10" placeholder="Enter text here"></textarea>
-      </label>
-      <button type="submit">
-        Get in touch
-      </button>
-    </form>
-
-    <hr>
-    <ul class="social-icons">
-      <li>
-        <a href=""><img src="./images/github.png" alt="github icon" />
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <img src="./images/linkedin.png" alt="linkedin icon" />
-        </a>
-      </li>
-      <li>
-        <a href="#"><img src="./images/angela.png" alt="anglist icon" />
-        </a>
-      </li>
-      <li>
-        <a href="#"><img src="./images/twitter.png" alt="twitter icon" />
-        </a>
-      </li>
-      <li>
-        <a href=""><img src="./images/medium.png" alt="medium icon" />
-        </a>
-      </li>
-    </ul>
-  </section>
-</body>
-
+  </body>
 </html>
