change the font-family for the contact-me form and fix textarea size

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             maxlength="500"
             required
             cols="30"
-            rows="10"
+            rows="4"
             placeholder="Enter text here"
           ></textarea>
         </label>
@@ -238,7 +238,7 @@
         </li>
         <li>
           <a href="">
-            <img src="./images/in.png" alt="linkedin icon" />
+            <img src="./images/linkedIn.png" alt="linkedin icon" />
           </a>
         </li>
         <li>
