change font-family for form and and icon to social media icons

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </li>
         <li>
           <a href="">
-            <img src="./images/linkedIn.png" alt="linkedin icon" />
+            <img src="./images/lindedin2.png" alt="linkedin icon" />
           </a>
         </li>
         <li>
