mobile verison enhancement and make the navbar responsive

--- a/index.html
+++ b/index.html
@@ -12,19 +12,31 @@
   <body>
     <header>
       <nav>
-        <a href="#" id="logo">Yousef Badr</a>
-        <img src="./images/Enabled.svg" alt="logo image" />
-      </nav>
-      <section id="header">
-        <h1>Hey There. I'm Yousef</h1>
-        <h5>I’am a Software Developer</h5>
-        <p>
-          I can help you build a product , feature or website Look through some
-          of my work and experience! If you like what you see and have a project
-          you need coded, don’t hestiate to contact me.
-        </p>
+        <div id="nav-container">
+          <a href="#" id="logo">Yousef Badr</a>
 
-        <ul class="social-icons">
+          <div id="menu-icon"></div>
+
+          <ul id="nav-el">
+            <li>Portfolio</li>
+            <li>About</li>
+            <li>Contact</li>
+            <li id="message"></li>
+          </ul>
+        </div>
+      </nav>
+      <section id="header-body">
+        <div id="intro">
+          <h1>Hey There. I'm Yousef</h1>
+          <h5>I’am a Software Developer</h5>
+          <p>
+            I can help you build a product , feature or website Look through
+            some of my work and experience! If you like what you see and have a
+            project you need coded, don’t hestiate to contact me.
+          </p>
+        </div>
+
+        <ul class="social-icons-header">
           <li>
             <a href=""
               ><img src="./images/Icon -GitHub.png" alt="github icon" />
@@ -52,94 +64,95 @@
           </li>
         </ul>
 
-        <img
-          src="./images/Group.png"
-          id="illustration"
-          alt="illustration background"
-        />
+        <!-- <div id="illustrationWrap">
+          <img src="./images/Group.png" alt="illustration background" />
+          <img src="./images/Illustration-header.png" alt="illustration" />
+        </div> -->
       </section>
     </header>
-
     <section id="myworks">
+      <!-- row 1 -->
       <div id="title">
         <h2>My Recent Works</h2>
         <hr />
       </div>
 
-      <section id="project1">
-        <img src="./images/Img Placeholder.png" alt="project background" />
-        <h3>Multi-Post Stories</h3>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a standard dummy text.
-        </p>
-        <ul class="skills">
-          <li>html</li>
-          <li>css</li>
-          <li>bootstrap</li>
-          <li>Ruby</li>
-        </ul>
-        <button>See Project</button>
-      </section>
+      <div id="projects">
+        <!-- row 2 -->
+        <!-- <section id="project1">
+          <img src="./images/Img Placeholder.png" alt="project background" />
+          <h3>Multi-Post Stories</h3>
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard dummy text ever
+            since the 1500s, when an unknown printer took a standard dummy text.
+          </p>
+          <ul class="skills">
+            <li>html</li>
+            <li>css</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <button>See Project</button>
+        </section> -->
 
-      <section id="project2">
-        <h3>Profesional Art Printing Data</h3>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard
-        </p>
-        <ul class="skills">
-          <li>html</li>
-          <li>css</li>
-          <li>bootstrap</li>
-        </ul>
-        <button>See Project</button>
-      </section>
+        <section class="project p2">
+          <h3>Profesional Art Printing Data</h3>
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul class="skills">
+            <li>html</li>
+            <li>css</li>
+            <li>bootstrap</li>
+          </ul>
+          <button>See Project</button>
+        </section>
 
-      <section id="project2">
-        <h3>Profesional Art Printing Data</h3>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard
-        </p>
-        <ul class="skills">
-          <li>html</li>
-          <li>css</li>
-          <li>bootstrap</li>
-        </ul>
-        <button>See Project</button>
-      </section>
+        <section class="project p3">
+          <h3>Profesional Art Printing Data</h3>
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul class="skills">
+            <li>html</li>
+            <li>css</li>
+            <li>bootstrap</li>
+          </ul>
+          <button>See Project</button>
+        </section>
 
-      <section id="project2">
-        <h3>Profesional Art Printing Data</h3>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard
-        </p>
-        <ul class="skills">
-          <li>html</li>
-          <li>css</li>
-          <li>bootstrap</li>
-        </ul>
-        <button>See Project</button>
-      </section>
+        <section class="project p4">
+          <h3>Profesional Art Printing Data</h3>
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul class="skills">
+            <li>html</li>
+            <li>css</li>
+            <li>bootstrap</li>
+          </ul>
+          <button>See Project</button>
+        </section>
 
-      <section id="project2">
-        <h3>Profesional Art Printing Data</h3>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard
-        </p>
-        <ul class="skills">
-          <li>html</li>
-          <li>css</li>
-          <li>bootstrap</li>
-        </ul>
-        <button>See Project</button>
-      </section>
+        <section class="project p5">
+          <h3>Profesional Art Printing Data</h3>
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul class="skills">
+            <li>html</li>
+            <li>css</li>
+            <li>bootstrap</li>
+          </ul>
+          <button>See Project</button>
+        </section>
+      </div>
     </section>
-
     <section id="about-me">
       <div id="about-header">
         <h4 id="title">About me</h4>
