--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <nav>
-        <div id="nav-container">
+        <div class="container" id="nav-container">
           <a href="#" id="logo">Yousef Badr</a>
 
           <div id="menu-icon"></div>
@@ -26,60 +26,64 @@
         </div>
       </nav>
       <section id="header-body">
-        <div id="intro">
-          <h1>Hey There. I'm Yousef</h1>
-          <h5>I’am a Software Developer</h5>
-          <p>
-            I can help you build a product , feature or website Look through
-            some of my work and experience! If you like what you see and have a
-            project you need coded, don’t hestiate to contact me.
-          </p>
+        <div class="container">
+          <div id="intro">
+            <h1>Hey There. I'm Yousef</h1>
+            <h5>I’am a Software Developer</h5>
+            <p>
+              I can help you build a product , feature or website Look through
+              some of my work and experience! If you like what you see and have
+              a project you need coded, don’t hestiate to contact me.
+            </p>
+          </div>
+
+          <div id="illustration">
+            <img src="./images/Group.png" alt="illustration background" />
+          </div>
+          <div id="illustration2">
+            <img
+              src="./images/Illustration-header.png"
+              alt="illustration background"
+            />
+          </div>
+          <ul class="social-icons-header">
+            <li>
+              <a href=""
+                ><img src="./images/Icon -GitHub.png" alt="github icon" />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/Icon - Linkedin.png" alt="linkedin icon" />
+              </a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./images/Icon - Angelist.png" alt="anglist icon" />
+              </a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./images/Icon - Twitter.png" alt="twitter icon" />
+              </a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/Icon - Medium.png" alt="medium icon" />
+              </a>
+            </li>
+          </ul>
         </div>
-
-        <ul class="social-icons-header">
-          <li>
-            <a href=""
-              ><img src="./images/Icon -GitHub.png" alt="github icon" />
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/Icon - Linkedin.png" alt="linkedin icon" />
-            </a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="./images/Icon - Angelist.png" alt="anglist icon" />
-            </a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="./images/Icon - Twitter.png" alt="twitter icon" />
-            </a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/Icon - Medium.png" alt="medium icon" />
-            </a>
-          </li>
-        </ul>
-
-        <!-- <div id="illustrationWrap">
-          <img src="./images/Group.png" alt="illustration background" />
-          <img src="./images/Illustration-header.png" alt="illustration" />
-        </div> -->
       </section>
     </header>
     <section id="myworks">
-      <!-- row 1 -->
       <div id="title">
         <h2>My Recent Works</h2>
         <hr />
       </div>
 
-      <div id="projects">
-        <!-- row 2 -->
-        <!-- <section id="project1">
+      <div class="container" id="projects">
+        <section id="project1">
           <img src="./images/Img Placeholder.png" alt="project background" />
           <h3>Multi-Post Stories</h3>
           <p>
@@ -94,7 +98,7 @@
             <li>Ruby</li>
           </ul>
           <button>See Project</button>
-        </section> -->
+        </section>
 
         <section class="project p2">
           <h3>Profesional Art Printing Data</h3>
